--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "@adobe/aio-cli-plugin-PLUGINNAME",
+  "name": "@adobe/aio-cli-plugin-app-files",
   "version": "0.0.0",
   "dependencies": {
     "@adobe/aio-lib-core-config": "^2.0.0",
     "@adobe/aio-lib-core-logging": "^1.1.0",
+    "@adobe/aio-lib-core-tvm": "^2.0.0",
+    "@adobe/aio-lib-files": "^1.3.1",
+    "@adobe/aio-lib-ims": "^4.1.1",
     "@oclif/command": "^1.6.1",
     "@oclif/config": "^1.15.1",
-    "@oclif/errors": "^1.1.2"
+    "@oclif/errors": "^1.1.2",
+    "cli-ux": "^5.5.0",
+    "fs-extra": "^9.0.1",
+    "js-yaml": "^3.14.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@adobe/eslint-config-aio-lib-config": "^1.2.0",
     "@oclif/dev-cli": "^1",
-    "@oclif/plugin-help": "^2",
+    "@oclif/plugin-help": "^2.2.3",
     "acorn": "^7",
-    "chalk": "^4",
+    "chalk": "^4.1.0",
     "eslint": "^6.2.2",
     "eslint-config-oclif": "^3.1.0",
     "eslint-config-standard": "^14.1.1",
@@ -31,7 +38,7 @@
     "stdout-stderr": "^0.1.9"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": ">=10.0.0"
   },
   "files": [
     "/oclif.manifest.json",
